[package]
name = "radar_setup"
version = "0.1.0"
authors = ["Matvei <klimat.gu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
terminal-menu = "1.9.7"
socketcan = {git = "https://github.com/klimatt/socketcan-rs.git", branch = "1.7.0"}
clap = "3.0.0-beta.1"
